@@ -28,6 +28,7 @@ version <next>:
 - gblur filter
 - avgblur filter
 - sobel and prewitt filter
+- MediaCodec HEVC decoding
 
 
 version 3.1:
